# Diwan

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  contributing.html  index.html  introduction.html  license  log.txt  print.html  searchindex.js  searchindex.json  specification.html  tarpaulin-report.html
.github/ISSUE_TEMPLATE/: 1.bug.md  2.feature.md  3.refactoring.md  4.security.md
.github/workflows/: deploy_docs.yml
cli/: Cargo.toml
cli/src/: main.rs
diterm/: Cargo.toml
diterm/src/: editor.rs  lib.rs
diwan/: Cargo.toml
diwan-lib/: Cargo.toml
diwan-lib/src/: lib.rs  loging.rs
diwan-lib/src/broker/: mod.rs
diwan-lib/src/commands/: mod.rs
diwan-lib/src/debuger/: mod.rs  mode_enum.rs  statusbar.rs  statusbar_struct.rs
diwan-lib/src/editor/: editor.rs  mod.rs  text_buffer.rs
diwan-lib/src/logs/: logging.rs  mod.rs
diwan-lib/src/screen/: keymap.rs  mainscreen.rs  mod.rs  statusbar.rs  ui.rs  widget.rs
diwan-lib/src/utils/: file_manager.rs  mod.rs
diwan-term/: Cargo.toml
diwan-term/src/: main.rs
diwan-term/tests/: logs.rs  mod.rs  widget.rs
diwan-term/tests/keymaps/: helper_func.rs  keymap.rs  mod.rs
diwan/src/: main.rs
diwan/src/commands/: edit_commands.rs  file_commands.rs  mod.rs
diwan/src/editor/: mod.rs  renderer.rs
diwan/src/screen/: mod.rs  myTerminal.rs  widget.rs
diwan/src/utils/: file_manager.rs  mod.rs  syntax_highlighter.rs
docs/: book.toml  doc_converter.sh  specification.md
docs/src/: SUMMARY.md  contributing.md  introduction.md  specification.md
