[package]
name = "diwan-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
cassowary = { version = "0.3.0", optional = true }
env_logger = "0.11.5"
fnv = { version = "1.0.7", optional = true }
log = "0.4.22"
ropey = "1.6.1"
signal-hook = "0.3.17"
termwiz = { version = "0.22.0", features = ["widgets"] }
tokio = { version = "1", features = ["full"] }
