[package]
name = "diwan-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
cassowary = { version = "0.3.0", optional = true }
fnv = { version = "1.0.7", optional = true }
log = {version = "0.4.22", optional = true }
ropey = "1.6.1"
signal-hook = "0.3.17"
simplelog = {version = "0.12.2", optional = true }
termwiz = { version = "0.22.0", features = ["widgets"] }
time = { version = "0.3.36", optional = true } 
tokio = { version = "1", features = ["full"] }

[features]
default = ["dnlog"]
dnlog = ["dep:simplelog", "dep:log", "dep:time"]
