[package]
name = "diwan-term"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true


[dependencies]
diwan = { path = "../diwan-lib", package = "diwan-lib" , features = ["dnlog"]}
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
termwiz = "0.22.0"
lazy_static = "1.5.0"

[[bin]]
name = "dn"
path = "src/main.rs"
